--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loader": "^2.4.7",
+    "react-loader-spinner": "^4.0.0",
     "react-native": "^0.64.1",
     "react-native-elements": "^3.4.1",
     "react-redux": "^7.2.4",
